# api

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  pyproject.toml
ai/: pipeline.py
ai/nutrition/: __init__.py  database_builder.py  food_name_mapping.py  nutrition.db  nutrition_lookup.py
app/: main.py  models.py  utils.py
config/: config.py
